# wp-reaction

./: .gitignore  README.md  install  setup.cfg
config/: wp-reaction.conf  wp-reaction.service
src/wp-reaction/: __init__.py  ban_ip.py  nginx_logs.py
src/wpreaction/: __init__.py  ban_ip.py  log_coordinates.py  login_failures.py  nginx_logs.py
