[metadata]
name = wpreaction-NekointheShell
version = 1
author = neko
author_email = neko@127.0.0.1
description = react to wordpress bullshit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NekointheShell/wp-reaction.git
project_urls =
    Bug Tracker = https://github.com/NekointheShell/wp-reaction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    ipwhois
    python-geoip-python3
    python-geoip-geolite2


[options.packages.find]
where = src


[console_scripts]
wp-reaction = wpreaction:main
